--- a/src/main/resources/templates/booking.html
+++ b/src/main/resources/templates/booking.html
@@ -26,5 +26,7 @@
         <td><a th:href="@{/bookings/delete/{id}(id=${booking.id})}">Delete</a></td>
     </tr>
 </table>
+
+<p><a href="/customer/home">Back to Dashboard</a></p>
 </body>
 </html>
