--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -20,6 +20,6 @@
     <a href="/payments">View Payments</a>
     <a href="/additional-services">Extra Services</a>
 </nav>
-
+<p><a href="/customer/home">Back to Dashboard</a></p>
 </body>
 </html>
