--- a/src/main/resources/templates/service-form.html
+++ b/src/main/resources/templates/service-form.html
@@ -25,6 +25,6 @@
 </form>
 
 <a href="/additional-services">Back to Services</a>
-
+<p><a href="/customer/home">Back to Dashboard</a></p>
 </body>
 </html>
