--- a/src/main/resources/templates/booking-form.html
+++ b/src/main/resources/templates/booking-form.html
@@ -12,12 +12,14 @@
 <body>
 
 <h1>Book a Room</h1>
-<form action="/bookings" method="post">
-    <label for="customerId">Customer ID:</label>
-    <input type="number" id="customerId" name="customerId" required>
-
-    <label for="roomId">Room ID:</label>
-    <input type="number" id="roomId" name="roomId" required>
+<form action="/bookings/book" method="post">
+    <label for="roomId">Choose Room:</label>
+    <select id="roomId" name="roomId" required>
+        <option value="" disabled selected>Select a room</option>
+        <tr th:each="room : ${rooms}">
+            <option th:value="${room.id}" th:text="${room.type}"></option>
+        </tr>
+    </select>
 
     <label for="checkInDate">Check-in Date:</label>
     <input type="date" id="checkInDate" name="checkInDate" required>
@@ -28,5 +30,8 @@
     <button type="submit">Book Now</button>
 </form>
 
+<p><a href="/bookings">Bookings</a></p>
+
+<p><a href="/customer/home">Back to Dashboard</a></p>
 </body>
 </html>
